--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ i am a <i>good listener</i> and an expert in various coding languages such as <i
 </table>
 </div>
 <div style="background-color:#98fb98;">
-<h1></h1>Courses@IITGOA : </h1>
+<h1>Courses@IITGOA : </h1>
 <h3> Spring Course</h3>
 <ul>
 <li><b>CS102</b> - Dr.Clint George</li>
