--- a/index.html
+++ b/index.html
@@ -1,51 +1,54 @@
 <html>
+<link rel="stylesheet" type="text/css" href="mycss.css">
 <head>
 <title>MY INFO</title>
 </head>
 <body>
-<div style="background-color:#add8e6;">
-<h1><font color="#000080">ABOUT ME:</font></h1>
-Hey,I Am <b>Nitin Kansal</b> an undergrad student at <b>Indian Institute Of Technology, Goa </b>
-i am a <i>good listener</i> and an expert in various coding languages such as <i>python,html,css,c++.</i> <br>
+<div class="about">
+<h1 class="name> ABOUT ME:</h1>
+<p class="discription">Hey,I Am <span class="name">Nitin Kansal</span> an undergrad student at <b>Indian Institute Of Technology, Goa 
+i am a <i>good listener</i> and an expert in various coding languages such as <i>python,html,css,c++.</i> <br> </p>
 <img src="https://media.licdn.com/dms/image/D4E03AQExlX2zhGfBnA/profile-displayphoto-shrink_200_200/0/1688217057534?e=2147483647&v=beta&t=aPjPKsfT60uPu64sqrTM8CgW4c6JEG6_WNjJssfBdCw">
 </div>
-<div style="background-color:#d3d3d3;">
-<h1><font color="#2f4f4f">EDUCATION:</h1>
+<div >
+<h1 class="edu">EDUCATION:</h1>
 
-<table border="solid">
+<table >
 <tr>
-<th>Academic Year<L/th><th>standard</th><th>School Name</th>
+<th>Academic Year</th><th>standard</th><th>School Name</th>
 </tr>
 <tr>
-<td>2021</td><td>10th</td><td>La Foundation School</td>
+<td class="left">2021</td><td class="mid">10th</td><td>La Foundation School</td>
 </tr>
 <tr>
-<td>2023</td><td>12th</td><td>Fortune Convent School</td>
+<td class="left">2023</td><td class="mid" >12th</td><td>Fortune Convent School</td>
 </tr>
 <tr>
-<td>2027</td><td>BTECH</td><td>INDIAN INSTITUTE OF TECHNOLOGY GOA</td>
-</tr> 
+<td class="left">2027</td><td class="mid">BTECH</td><td>INDIAN INSTITUTE OF TECHNOLOGY GOA</td>
+</tr><font/>
 </table>
-</div>
-<div style="background-color:#98fb98;">
-<h1> Courses@IITGOA : </h1>
+</div><br></br><br></br>
+<h1 class="courses"> Courses@IITGOA : </h1>
+<div class="courses1">
+
 <h3> Spring Course</h3>
 <ul>
-<li><b>CS102</b> - Dr.Clint George</li>
-<li><b>EE101</b> - Apeksha Mahajan</li>
-<li><b>PH101</b> -Vaibhav Wasnik</li>
-<li><b>NO102</b> -*Santosh Upadhyay</li>
-<li><b>MA102</b> -Kalpesh Haria</li>
-</ul>
+<li><span class="code">CS102</span> - <span class="course">Dr.Clint George</span></li>
+<li><span class="code">EE101</span> - <span class="course">Apeksha Mahajan</span></li>
+<li><span class="code">PH101</span> -<span class="course">Vaibhav Wasnik</span></li>
+<li><span class="code">NO102</span> -<span class="course">Santosh Upadhyay</span></li>
+<li><span class="code">MA102</span>-<span class="course">Kalpesh Haria</span></li>
+</ul></div>
+<div class="courses2" >
 <h3> Autumn Course</h3>
 <ol list type="i"> 
-<li><b>CH101</b> - Dr.siva</li>
-<li><b>CS101</b> - Dr.Clint George</li>
-<li><b>CH102</b> -Raja Mitra</li>
-<li><b>NO101</b> -Santosh Upadhyay</li>
-<li><b>HS101</b> -Sabiha H.</li>
+<li><span class="code">CH101</span> - <span class="course">Dr.siva</span></li>
+<li><span class="code">CS101</span> - <span class="course">Dr.Clint George</span></li>
+<li><span class="code">CH102</span> -<span class="course">Raja Mitra</span></li>
+<li><span class="code">NO101</span> -<span class="course">Santosh Upadhyay</span></li>
+<li><span class="code">HS101</span> -<span class="course">Sabiha H.</span></li>
 </ol>
-</div>
+</div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 <div style="background-color:#fff0f5;">
 <h1 style="text-decoration:underline;"><font color = "#c71585">Hobbies, Interests, Extracurricular Activities, Projects :</h1>
 <b>HOBBIES AND INTERESTS </b>: Sketching, Writing poems, Playing badminton<br><br>
